// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders default props 1`] = `
<img
  className="avatar avatar-small emotion-0"
  height={20}
  width={20}
/>
`;

exports[`Avatar respects isChild 1`] = `
<img
  className="avatar avatar-small avatar-child emotion-0"
  height={20}
  width={20}
/>
`;
